简单规划功能

--- a/src/index.less
+++ b/src/index.less
@@ -3,3 +3,16 @@
 @menu-dark-title: #001529;
 @menu-dark-active-bg: #000c17;
 @layout-sider-background: #001529;
+
+.floatL {
+  float: left;
+}
+
+.floatR {
+  float: right;
+}
+
+.clearfix{
+  overflow:hidden;
+  _zoom:1;
+}
